Fix a typo, s/Evaluting/Evaluating/g

https://bugs.freedesktop.org/show_bug.cgi?id=80767